data/derived/fa15/progs/unify/prog3572.ml.out
Characters 76-78:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type int -> 'a -> int
       but an expression was expected of type 'a list
